Added registration and login functions
User can now register and login successfully

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Samaritan - Connecting Lives</title>
+        <title>RedBond - Connecting Lives</title>
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
         <link rel="icon" href="/assets/icon.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
