--- a/forms/donorRegister.html
+++ b/forms/donorRegister.html
@@ -82,6 +82,7 @@
         isSuccess: false,
         ageError: false,
         locationError: false,
+        
 
         detectLocation() {
           if (navigator.geolocation) {
@@ -125,8 +126,13 @@
               .insert([{
                 id: authData.user.id,
                 email: this.email,
-                password: "handled-by-auth",
+                age: this.age,
+                password: this.password,
                 full_name: `${this.firstName} ${this.surname}`,
+                blood_type: this.bloodGroup,
+                location: this.location,
+                latitude: this.latitude,
+                longitude: this.longitude,
                 role: "donor"
               }]);
 
@@ -135,7 +141,7 @@
             this.isSuccess = true;
             this.message = "Registration successful!";
             setTimeout(() => {
-              window.location.href = "donor-dashboard.html";
+              window.location.href = "../donor/donorDashboard.html";
             }, 1500);
           } catch (error) {
             this.isSuccess = false;
