--- a/donor/donorDashboard.html
+++ b/donor/donorDashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Samaritan - User Dashboard</title>
+  <title>RedBond - User Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 font-sans">
@@ -21,20 +21,18 @@
         <!-- Buttons Section -->
         <button id="donate-btn" class="flex-1 bg-red-600 text-white py-5 px-4 rounded-lg flex flex-col items-center justify-center hover:bg-red-700 transition-all">
           <div class="w-12 h-12 bg-white rounded-full mb-2 flex items-center justify-center">
-            <!-- Optional icon -->
           </div>
           <span class="font-semibold">Donate Blood</span>
         </button>
         <button id="request-btn" class="flex-1 bg-red-600 text-white py-5 px-4 rounded-lg flex flex-col items-center justify-center hover:bg-red-700 transition-all">
           <div class="w-12 h-12 bg-white rounded-full mb-2 flex items-center justify-center">
-            <!-- Optional icon -->
           </div>
           <span class="font-semibold">Request Blood</span>
         </button>
       </div>
     </section>
 
-   <!-- Blood Requests -->
+    <!-- Blood Requests -->
     <section>
       <div class="flex justify-between items-center mb-2">
         <h2 class="text-lg font-semibold">Blood Requests</h2>
