--- a/forms/donorRegister.html
+++ b/forms/donorRegister.html
@@ -135,7 +135,7 @@
             this.isSuccess = true;
             this.message = "Registration successful!";
             setTimeout(() => {
-              window.location.href = "donor-dashboard.html";
+              window.location.href = "../donor/donorDashboard.html";
             }, 1500);
           } catch (error) {
             this.isSuccess = false;
@@ -160,7 +160,7 @@
             this.isSuccess = true;
             this.message = "Login successful! Redirecting...";
             setTimeout(() => {
-              window.location.href = "donor-dashboard.html";
+              window.location.href = "../donor/donorDashboard.html";
             }, 1500);
           } catch (error) {
             this.isSuccess = false;
