--- a/admin/adminDashboard.html
+++ b/admin/adminDashboard.html
@@ -33,19 +33,19 @@
       <!-- Cards -->
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
         <div class="bg-white p-4 rounded shadow">
-          <h3 class="text-sm text-red-500">Pending Requests</h3>
+          <h3 class="text-sm text-red-500">Total Pending Requests</h3>
           <p class="text-2xl font-bold text-yellow-500">12</p>
         </div>
         <div class="bg-white p-4 rounded shadow">
-          <h3 class="text-sm text-red-500">Active Requests</h3>
+          <h3 class="text-sm text-red-500">Total Active Requests</h3>
           <p class="text-2xl font-bold text-blue-500">8</p>
         </div>
         <div class="bg-white p-4 rounded shadow">
-          <h3 class="text-sm text-red-500">Scheduled Responds</h3>
+          <h3 class="text-sm text-red-500">Total Scheduled Responds</h3>
           <p class="text-2xl font-bold text-indigo-500">5</p>
         </div>
         <div class="bg-white p-4 rounded shadow">
-          <h3 class="text-sm text-red-500">Fulfilled Requests</h3>
+          <h3 class="text-sm text-red-500">Total Fulfilled Requests</h3>
           <p class="text-2xl font-bold text-green-500">26</p>
         </div>
       </div>
