--- a/admin/adminDashboard.html
+++ b/admin/adminDashboard.html
@@ -8,6 +8,7 @@
   <script src="https://unpkg.com/alpinejs" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://kit.fontawesome.com/244af82459.js" crossorigin="anonymous"></script>
+  <script type="module" src="../config.js"></script> <!-- Supabase client -->
 </head>
 
 <body class="h-full flex">
@@ -34,19 +35,19 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
         <div class="bg-white p-4 rounded shadow">
           <h3 class="text-sm text-red-500">Total Pending Requests</h3>
-          <p class="text-2xl font-bold text-yellow-500">12</p>
+          <p class="text-2xl font-bold text-yellow-500">--</p>
         </div>
         <div class="bg-white p-4 rounded shadow">
           <h3 class="text-sm text-red-500">Total Active Requests</h3>
-          <p class="text-2xl font-bold text-blue-500">8</p>
+          <p class="text-2xl font-bold text-blue-500">--</p>
         </div>
         <div class="bg-white p-4 rounded shadow">
           <h3 class="text-sm text-red-500">Total Scheduled Responds</h3>
-          <p class="text-2xl font-bold text-indigo-500">5</p>
+          <p class="text-2xl font-bold text-indigo-500">--</p>
         </div>
         <div class="bg-white p-4 rounded shadow">
           <h3 class="text-sm text-red-500">Total Fulfilled Requests</h3>
-          <p class="text-2xl font-bold text-green-500">26</p>
+          <p class="text-2xl font-bold text-green-500">--</p>
         </div>
       </div>
 
@@ -58,7 +59,7 @@
         </div>
         <div class="bg-white p-4 rounded shadow">
           <h4 class="font-semibold mb-2">Hospital Summary</h4>
-          <canvas id="hospitalChart"></canvas>
+          <div id="hospitalCard"></div>
         </div>
       </div>
     </section>
@@ -80,16 +81,7 @@
             </tr>
           </thead>
           <tbody>
-            <!-- Sample row -->
-            <tr class="border-b">
-              <td class="p-2">#R001</td>
-              <td class="p-2">City Hospital</td>
-              <td class="p-2">O+</td>
-              <td class="p-2 space-x-2">
-                <button class="px-3 py-1 bg-green-500 text-white rounded">Approve</button>
-                <button class="px-3 py-1 bg-red-500 text-white rounded">Reject</button>
-              </td>
-            </tr>
+            <!-- row data from database -->
           </tbody>
         </table>
       </div>
@@ -166,23 +158,23 @@
 
   <!-- Chart Init Scripts -->
   <script>
-    const ctx1 = document.getElementById('donorChart');
-    new Chart(ctx1, {
-      type: 'doughnut',
-      data: {
-        labels: ['O-', 'O+', 'A+', 'B+', 'AB+'],
-        datasets: [{ data: [13, 12, 19, 3, 5], backgroundColor: ['#34244f', '#facc15', '#60a5fa', '#f87171', '#34d399'] }]
-      }
-    });
+    // const ctx1 = document.getElementById('donorChart');
+    // new Chart(ctx1, {
+    //   type: 'doughnut',
+    //   data: {
+    //     labels: ['O-', 'O+', 'A+', 'B+', 'AB+'],
+    //     datasets: [{ data: [0, 0, 0, 0, 0], backgroundColor: ['#34244f', '#facc15', '#60a5fa', '#f87171', '#34d399'] }]
+    //   }
+    // });
 
-    const ctx2 = document.getElementById('hospitalChart');
-    new Chart(ctx2, {
-      type: 'bar',
-      data: {
-        labels: ['Hospital A', 'Hospital B'],
-        datasets: [{ label: 'Requests', data: [10, 15], backgroundColor: '#60a5fa' }]
-      }
-    });
+    // const ctx2 = document.getElementById('hospitalChart');
+    // new Chart(ctx2, {
+    //   type: 'bar',
+    //   data: {
+    //     labels: ['Hospital A', 'Hospital B'],
+    //     datasets: [{ label: 'Requests', data: [10, 15], backgroundColor: '#60a5fa' }]
+    //   }
+    // });
 
     const ctx3 = document.getElementById('remoteInventoryChart');
     new Chart(ctx3, {
@@ -203,4 +195,102 @@
     });
   </script>
 </body>
+<script type="module">
+    
+  
+    // Fetch and populate dashboard stats
+    async function loadDashboardStats() {
+      const { data: pending, error: err1 } = await supabase
+        .from('requests')
+        .select('*')
+        .eq('status', 'pending');
+  
+      const { data: active, error: err2 } = await supabase
+        .from('requests')
+        .select('*')
+        .eq('status', 'active');
+  
+      const { data: scheduled, error: err3 } = await supabase
+        .from('requests')
+        .select('*')
+        .eq('status', 'scheduled');
+  
+      const { data: fulfilled, error: err4 } = await supabase
+        .from('requests')
+        .select('*')
+        .eq('status', 'fulfilled');
+  
+      document.querySelectorAll('p.text-2xl')[0].textContent = pending?.length ?? 0;
+      document.querySelectorAll('p.text-2xl')[1].textContent = active?.length ?? 0;
+      document.querySelectorAll('p.text-2xl')[2].textContent = scheduled?.length ?? 0;
+      document.querySelectorAll('p.text-2xl')[3].textContent = fulfilled?.length ?? 0;
+    }
+  
+    // 🏥 Populate Blood Requests Table
+    async function loadBloodRequests() {
+      const { data: requests, error } = await supabase
+        .from('blood_requests')
+        .select('id, blood_type, hospital_id')
+        .eq('status', 'pending');
+  
+      const tbody = document.querySelector("section[x-show='tab === \"requests\"'] tbody");
+      tbody.innerHTML = ""; // Clear default row
+  
+      requests.forEach(req => {
+        const row = document.createElement('tr');
+        row.className = 'border-b';
+        row.innerHTML = `
+          <td class="p-2">#${req.id}</td>
+          <td class="p-2">${req.hospital_name}</td>
+          <td class="p-2">${req.blood_type}</td>
+          <td class="p-2 space-x-2">
+            <button class="px-3 py-1 bg-green-500 text-white rounded">Approve</button>
+            <button class="px-3 py-1 bg-red-500 text-white rounded">Reject</button>
+          </td>`;
+        tbody.appendChild(row);
+      });
+    }
+  
+    // Example: Fetch data for Donor Chart
+    async function loadDonorChart() {
+      const { data: donors } = await supabase.from('users').select('blood_type');
+  
+      const countMap = {};
+      for (const donor of donors) {
+        const type = donor.blood_type;
+        countMap[type] = (countMap[type] || 0) + 1;
+      }
+  
+      const ctx = document.getElementById('donorChart').getContext('2d');
+      new Chart(ctx, {
+        type: 'doughnut',
+        data: {
+          labels: Object.keys(countMap),
+          datasets: [{
+            data: Object.values(countMap),
+            backgroundColor: ['#34244f', '#facc15', '#60a5fa', '#f87171', '#34d399']
+          }]
+        }
+      });
+    }
+
+    async function loadHospitalCard() {
+  const { data: hospitals } = await supabase.from('hospital_users').select();
+  const total = hospitals.length;
+
+  const container = document.getElementById('hospitalCard');
+  container.innerHTML = `
+    <div style="padding: 1.5rem; background: #facc15; color: #1e1b4b; border-radius: 1rem; font-size: 1.5rem; text-align: center;">
+      <strong>${total}</strong> Hospitals Registered
+    </div>
+  `;
+}
+
+  
+    // 🔁 Init
+    loadDashboardStats();
+    loadBloodRequests();
+    loadDonorChart();
+    loadHospitalCard();
+  </script>  
 </html>
