--- a/hospital/hospitalDashboard.html
+++ b/hospital/hospitalDashboard.html
@@ -15,9 +15,9 @@
 
   <div class="flex min-h-screen">
     <!-- Sidebar -->
-    <aside class="w-60 bg-white shadow-md p-4 space-y-6">
+    <aside class="w-64 bg-white shadow-md p-4 space-y-6">
       <div class="text-xl font-bold text-red-600">RedBond <i class="fas fa-tint"></i></div>
-      <nav class="flex flex-col space-y-3">
+      <nav class=" space-y-6">
         <a href="#/" data-navigo class="nav-link text-gray-700 hover:text-red-600 flex items-center space-x-2">
           <i class="fas fa-home"></i><span>Dashboard</span>
         </a>
