--- a/admin/adminDashboard.html
+++ b/admin/adminDashboard.html
@@ -95,16 +95,17 @@
         <table class="w-full text-sm text-left">
             <thead>
             <tr class="bg-gray-50 text-gray-600">
+                <th class="p-2">ID</th>
                 <th class="p-2">Hospital</th>
-                <th class="p-2">Donor</th>
                 <th class="p-2">Blood Type</th>
+                <th class="p-2">Donor</th>
                 <th class="p-2">Location</th>
                 <th class="p-2">Scheduled Time</th>
                 <th class="p-2">Action</th>
             </tr>
             </thead>
-            <tbody>
-            <tr class="border-b hover:bg-gray-50">
+            <tbody id="approvedRequestsTbody">
+            <!-- <tr class="border-b hover:bg-gray-50">
                 <td class="p-2">HealthCare Plus</td>
                 <td class="p-2">John Doe</td>
                 <td class="p-2">O+</td>
@@ -120,7 +121,7 @@
                     Approve
                 </button>
                 </td>
-            </tr>
+            </tr> -->
             <!-- You can loop more rows here using Alpine.js or JS fetch -->
             </tbody>
         </table>
@@ -208,6 +209,55 @@
       document.querySelectorAll('p.text-2xl')[2].textContent = scheduled?.length ?? 0;
       document.querySelectorAll('p.text-2xl')[3].textContent = fulfilled?.length ?? 0;
     }
+
+
+// Fix this scope
+// async function loadPendingResponses() {
+//   const { data: responses, error } = await supabase
+//     .from('responses')
+//     .select('id, name, blood_type, hospital_id, donor_id, location') // Adjust if needed
+//     .eq('status', 'pending');
+
+//   if (error) {
+//     console.error("❌ Error fetching pending responses:", error);
+//     return;
+//   }
+
+//   const tbody = document.getElementById("approvedRequestsTbody");
+//   if (!tbody) {
+//     console.warn("⚠️ Table body with ID 'approvedRequestsTbody' not found.");
+//     return;
+//   }
+
+//   tbody.innerHTML = "";
+
+//   responses.forEach(res => {
+//     const row = document.createElement("tr");
+//     row.className = "border-b hover:bg-gray-50";
+
+//     row.innerHTML = `
+//       <td class="p-2">${res.hospital_id || "Unknown Hospital"}</td>
+//       <td class="p-2">${res.name || "No Name"}</td>
+//       <td class="p-2">${res.blood_type}</td>
+//       <td class="p-2">${res.donor_id || "N/A"}</td>
+//       <td class="p-2">${res.location || "Unknown"}</td>
+//       <td class="p-2">
+//         <input type="datetime-local" class="border rounded p-1" />
+//       </td>
+//       <td class="p-2">
+//         <button
+//           class="bg-green-600 text-white px-3 py-1 rounded hover:bg-green-700"
+//           onclick="approveSchedule('${res.id}', '${res.hospital_id}', this)"
+//         >
+//           Approve
+//         </button>
+//       </td>
+//     `;
+//     tbody.appendChild(row);
+//   });
+// }
+
+
   
     // Populate Blood Requests Table
     async function loadBloodRequests() {
@@ -319,5 +369,6 @@
     loadBloodRequests();
     loadDonorChart();
     loadHospitalCard();
+    loadPendingResponses();
   </script>  
 </html>
