--- a/hospital/hospitalDashboard.html
+++ b/hospital/hospitalDashboard.html
@@ -162,7 +162,7 @@ const dashboardView = async () => {
     </div>
 
     <div class="bg-white rounded shadow p-4 overflow-y-auto"
-      style="max-height: calc(100vh - 260px); min-height: 200px; width: 1250px;">
+      style="max-height: calc(100vh - 260px); min-height: 200px; width: 100%;">
       <h2 class="text-xl font-semibold mb-4">Activity</h2>
       <div id="activity-feed" class="space-y-3">
         ${activityList}
