--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- About Section -->
         <section id="about" class="py-16 px-4 bg-white">
             <div class="max-w-4xl mx-auto text-center">
-            <h3 class="text-2xl font-bold mb-4">Why Samaritan?</h3>
+            <h3 class="text-2xl font-bold mb-4">Why RedBond?</h3>
             <p class="text-lg text-gray-700">In emergencies, every second matters. RedBond ensures faster blood donor discovery, real-time hospital availability updates, and instant notifications for nearby donors.</p>
             </div>
         </section>
