--- a/admin/adminDashboard.html
+++ b/admin/adminDashboard.html
@@ -96,33 +96,14 @@
             <thead>
             <tr class="bg-gray-50 text-gray-600">
                 <th class="p-2">ID</th>
-                <th class="p-2">Hospital</th>
-                <th class="p-2">Blood Type</th>
-                <th class="p-2">Donor</th>
-                <th class="p-2">Location</th>
+                <th class="p-2">Request ID</th>
+                <th class="p-2">Donor ID</th>
                 <th class="p-2">Scheduled Time</th>
                 <th class="p-2">Action</th>
             </tr>
             </thead>
             <tbody id="approvedRequestsTbody">
-            <!-- <tr class="border-b hover:bg-gray-50">
-                <td class="p-2">HealthCare Plus</td>
-                <td class="p-2">John Doe</td>
-                <td class="p-2">O+</td>
-                <td class="p-2">Lilongwe</td>
-                <td class="p-2">
-                <input type="datetime-local" class="border rounded p-1" />
-                </td>
-                <td class="p-2">
-                <button
-                    class="bg-green-600 text-white px-3 py-1 rounded hover:bg-green-700"
-                    @click="approveSchedule(/* add your logic */)"
-                >
-                    Approve
-                </button>
-                </td>
-            </tr> -->
-            <!-- You can loop more rows here using Alpine.js or JS fetch -->
+            <!-- Fetch from supabase -->
             </tbody>
         </table>
     </div>
@@ -212,50 +193,48 @@
 
 
 // Fix this scope
-// async function loadPendingResponses() {
-//   const { data: responses, error } = await supabase
-//     .from('responses')
-//     .select('id, name, blood_type, hospital_id, donor_id, location') // Adjust if needed
-//     .eq('status', 'pending');
+async function loadPendingResponses() {
+  const { data: responses, error } = await supabase
+    .from('responses')
+    .select('id, request_id, donor_id') // Adjust if needed
+    .eq('status', 'pending');
 
-//   if (error) {
-//     console.error("❌ Error fetching pending responses:", error);
-//     return;
-//   }
+  if (error) {
+    console.error(" Error fetching pending responses:", error);
+    return;
+  }
 
-//   const tbody = document.getElementById("approvedRequestsTbody");
-//   if (!tbody) {
-//     console.warn("⚠️ Table body with ID 'approvedRequestsTbody' not found.");
-//     return;
-//   }
+  const tbody = document.getElementById("approvedRequestsTbody");
+  if (!tbody) {
+    console.warn(" Table body with ID 'approvedRequestsTbody' not found.");
+    return;
+  }
 
-//   tbody.innerHTML = "";
+  tbody.innerHTML = "";
 
-//   responses.forEach(res => {
-//     const row = document.createElement("tr");
-//     row.className = "border-b hover:bg-gray-50";
+  responses.forEach(res => {
+    const row = document.createElement("tr");
+    row.className = "border-b hover:bg-gray-50";
 
-//     row.innerHTML = `
-//       <td class="p-2">${res.hospital_id || "Unknown Hospital"}</td>
-//       <td class="p-2">${res.name || "No Name"}</td>
-//       <td class="p-2">${res.blood_type}</td>
-//       <td class="p-2">${res.donor_id || "N/A"}</td>
-//       <td class="p-2">${res.location || "Unknown"}</td>
-//       <td class="p-2">
-//         <input type="datetime-local" class="border rounded p-1" />
-//       </td>
-//       <td class="p-2">
-//         <button
-//           class="bg-green-600 text-white px-3 py-1 rounded hover:bg-green-700"
-//           onclick="approveSchedule('${res.id}', '${res.hospital_id}', this)"
-//         >
-//           Approve
-//         </button>
-//       </td>
-//     `;
-//     tbody.appendChild(row);
-//   });
-// }
+    row.innerHTML = `
+      <td class="p-2">${res.id || "Unknown Hospital"}</td>
+      <td class="p-2">${res.request_id || "No Name"}</td>
+      <td class="p-2">${res.donor_id}</td>
+      <td class="p-2">
+        <input type="datetime-local" class="border rounded p-1" />
+      </td>
+      <td class="p-2">
+        <button
+          class="bg-green-600 text-white px-3 py-1 rounded hover:bg-green-700"
+          onclick="approveSchedule('${res.id}', '${res.request_id}', this)"
+        >
+          Approve
+        </button>
+      </td>
+    `;
+    tbody.appendChild(row);
+  });
+}
 
 
   
