--- a/donor/donorDashboard.html
+++ b/donor/donorDashboard.html
@@ -7,6 +7,7 @@
 
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <script type="module" src="../config.js"></script>
 
   <!-- Alpine.js CDN -->
   <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
@@ -22,6 +23,9 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
   <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
 
+  <!-- Supabase JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
   <style>
     #map {
       height: 600px;
@@ -35,7 +39,7 @@
   <script>
     function donorDashboard() {
       return {
-        username: localStorage.getItem("donorName") || "Donor",
+        username: "",
         approvedRequests: [
           { id: 1, hospitalName: "Hope Clinic", location: "Lilongwe", urgency: "High" },
           { id: 2, hospitalName: "LifeCare Hospital", location: "Blantyre", urgency: "Medium" },
@@ -44,7 +48,24 @@
           { id: 101, hospitalName: "Saint Mary's", date: "2025-05-01" }
         ],
         map: null,
-        init() {},
+        init: async function () {
+
+          const {
+            data: { user }
+          } = await supabase.auth.getUser();
+
+          if (user?.email) {
+            const { data, error } = await supabase
+              .from("users")
+              .select("full_name")
+              .eq("email", user.email)
+              .single();
+
+            if (data?.full_name) {
+              this.username = data.full_name;
+            }
+          }
+        },
         initMap() {
           if (this.map) return;
 
@@ -160,14 +181,12 @@
     const app = document.getElementById("app");
 
     const render = (html) => {
-  app.innerHTML = html;
-  // Wait for DOM to fully update before initializing Alpine
-  requestAnimationFrame(() => {
-    Alpine.destroyTree(app); // Optional, if Alpine fails to clean up
-    Alpine.initTree(app);
-  });
-};
-
+      app.innerHTML = html;
+      requestAnimationFrame(() => {
+        Alpine.destroyTree(app);
+        Alpine.initTree(app);
+      });
+    };
 
     router
       .on({
